@@ -66,6 +66,9 @@ Bug fixes / Maintenance
 - make initial conftest discovery ignore "--" prefixed arguments 
 - fix resultlog plugin when used in an multicpu/multihost xdist situation 
   (thanks Jakub Gustak) 
+- perform distributed testing related reporting in the xdist-plugin 
+  rather than having dist-related code in the generic py.test 
+  distribution
 
 Changes between 1.3.0 and 1.3.1
 ==================================================
